fixed scrolling on small screens

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -107,11 +107,6 @@
     width: 15rem;
 }
 
-.img-main {
-    width: auto;
-    height: 10rem;
-    margin: 0.5rem 1.2rem 1.5rem 1.2rem;
-}
 .word-wrap-landing {
     word-wrap: break-word;
     width: 45vw;
@@ -124,10 +119,23 @@
     }
     .bg-landing-content {
         z-index: 3;
+        margin: 0;
+        padding: 0;
     }
     .img-landing-container {
         z-index: 1;
-        margin-top: -20rem;
+        margin: -20rem 0 0 0;
+        width: 100%;
+        height: 40rem;
+        display: flex;
+        justify-content: flex-end;
+        overflow-x: hidden;
+    }
+    .img-landing-container img {
+        width: 15rem;
+        height: auto;
+        margin: auto;
+        overflow-x: hidden;
     }
     .features {
         margin-top: 0;
@@ -198,6 +206,7 @@
     /* /Images */
     .word-wrap-landing {
         word-wrap: break-word;
-        width: 80vw;
+        width: 70vw;
+        padding: 0 2rem 0 0;
     }
 }
